August_30/August_30/src/objects/Survey__c.object
<CustomObject>
    <fields>
        <fullName>Culture__c</fullName>
        <label>Culture</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Measurement__c</fullName>
        <label>Measurement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Over_all_Maturity_Level__c</fullName>
        <label>Over all Maturity Level</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical__c</fullName>
        <label>Technical</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Survey_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Survey Completed</label>
        <type>Checkbox</type>
    </fields>
    <label>Survey</label>
    <nameField>
        <label>Survey</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>devops_self_assessment</fullName>
        <active>true</active>
        <label>devops self assessment</label>
    </recordTypes>
</CustomObject>